--- a/src/styles.css
+++ b/src/styles.css
@@ -95,3 +95,16 @@ snack-bar-container.notification simple-snack-bar{
     font-size: 18px;
     font-weight: bold;
 }
+div.container{
+    margin: 0px 40px;
+}
+.fill-remaining-space{
+    flex: 1 1 auto;
+}
+form.normal-form{
+    margin: 10px;
+}
+.controles-container{
+    width: 100%;
+    padding: 5%;
+}
